--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Alime - Photography HTML Template</title>
+    <title>NRFZ | About</title>
 
     <link rel="icon" href="./img/core-img/favicon.png">
 
@@ -86,15 +86,15 @@
     <section class="about-me-summ section-padding-80-0 clearfix">
         <div class="container">
             <div class="row">
-                <div class="col-12">
+                <div class="col-12 sect-title">
                     <div class="section-heading text-center wow fadeInUp" data-wow-delay="100ms">
-                        <h2>Summary</h2>
+                        <h2 style="font-size: 36px">Summary</h2>
                     </div>
                 </div>
 
             </div>
             <div class="row">
-                <div class="col-md-6 col-lg-4">
+                <div class="col-md-6 col-lg-4 box-indiv">
                     <div class="about-me-summary text-center mb-80 wow fadeInUp" data-wow-delay="300ms">
                         <div class="summ-icon">
                             <i class="fa-solid fa-cake-candles"></i>
@@ -104,7 +104,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-6 col-lg-4">
+                <div class="col-md-6 col-lg-4 box-indiv">
                     <div class="about-me-summary text-center mb-80 wow fadeInUp" data-wow-delay="500ms">
                         <div class="summ-icon">
                             <i class="fa-solid fa-earth-asia"></i>
@@ -114,7 +114,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-6 col-lg-4">
+                <div class="col-md-6 col-lg-4 box-indiv">
                     <div class="about-me-summary text-center mb-80 wow fadeInUp" data-wow-delay="700ms">
                         <div class="summ-icon">
                             <i class="fa-solid fa-circle-user"></i>
@@ -124,7 +124,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-6 col-lg-4">
+                <div class="col-md-6 col-lg-4 box-indiv">
                     <div class="about-me-summary text-center mb-80 wow fadeInUp" data-wow-delay="900ms">
                         <div class="summ-icon">
                             <i class="fa-solid fa-user-graduate"></i>
@@ -134,7 +134,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-8 col-lg-8">
+                <div class="col-md-8 col-lg-8 box-indiv">
                     <div class="about-me-summary text-center mb-80 wow fadeInUp" data-wow-delay="900ms">
                         <div class="summ-icon">
                             <i class="fa-solid fa-user-graduate"></i>
@@ -154,19 +154,19 @@
             <div class="row">
                 <div class="col-12">
                     <div class="section-heading text-center wow fadeInUp" data-wow-delay="100ms">
-                        <h2>Timelines</h2>
+                        <h2 style="font-size: 36px">Timelines</h2>
                     </div>
                 </div>
 
                 <div class="col-12">
                     <div class="section-heading text-center wow fadeInUp" data-wow-delay="100ms">
-                        <h1 style="text-align: left; margin-bottom: -45px;">Education</h2>
+                        <h1 style="text-align: left; margin-bottom: -45px;"><u>Education</u></h2>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6 col-lg-4">
-                    <div class="timeline-content text-center mb-80 wow fadeInUp" data-wow-delay="300ms">
+                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="300ms">
                         <div class="period-date-edu">
                             2019 - 2022
                         </div>
@@ -177,7 +177,7 @@
                 </div>
 
                 <div class="col-md-6 col-lg-4">
-                    <div class="timeline-content text-center mb-80 wow fadeInUp" data-wow-delay="500ms">
+                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="500ms">
                         <div class="period-date-edu">
                             2017 - 2018
                         </div>
@@ -188,7 +188,7 @@
                 </div>
 
                 <div class="col-md-6 col-lg-4">
-                    <div class="timeline-content text-center mb-80 wow fadeInUp" data-wow-delay="700ms">
+                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="700ms">
                         <div class="period-date-edu">
                             2013 - 2016
                         </div>
@@ -199,7 +199,7 @@
                 </div>
 
                 <div class="col-md-6 col-lg-4">
-                    <div class="timeline-content text-center mb-80 wow fadeInUp" data-wow-delay="100ms">
+                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="100ms">
                         <div class="period-date-edu">
                             2007 - 2012
                         </div>
@@ -218,13 +218,13 @@
             <div class="row">
                 <div class="col-12">
                     <div class="section-heading text-center wow fadeInUp" data-wow-delay="100ms">
-                        <h1 style="text-align: left; margin-bottom: -45px;">Awards & Achievements</h2>
+                        <h1 style="text-align: left; margin-bottom: -45px; margin-top: 3em;"><u>Awards & Achievements</u></h2>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6 col-lg-4">
-                    <div class="timeline-content text-center mb-80 wow fadeInUp" data-wow-delay="300ms">
+                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="300ms">
                         <div class="period-date-aa">
                             2023
                         </div>
@@ -236,7 +236,7 @@
                 </div>
 
                 <div class="col-md-6 col-lg-4">
-                    <div class="timeline-content text-center mb-80 wow fadeInUp" data-wow-delay="500ms">
+                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="500ms">
                         <div class="period-date-aa">
                             2019
                         </div>
@@ -251,7 +251,7 @@
                 </div>
 
                 <div class="col-md-6 col-lg-4">
-                    <div class="timeline-content text-center mb-80 wow fadeInUp" data-wow-delay="700ms">
+                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="700ms">
                         <div class="period-date-aa">
                             2018
                         </div>
@@ -267,7 +267,7 @@
                 </div>
 
                 <div class="col-md-6 col-lg-4">
-                    <div class="timeline-content text-center mb-80 wow fadeInUp" data-wow-delay="100ms">
+                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="100ms">
                         <div class="period-date-aa">
                             2017
                         </div>
@@ -288,13 +288,13 @@
             <div class="row">
                 <div class="col-12">
                     <div class="section-heading text-center wow fadeInUp" data-wow-delay="100ms">
-                        <h1 style="text-align: left; margin-bottom: -45px;">Experiences</h2>
+                        <h1 style="text-align: left; margin-bottom: -45px; margin-top: 3em;"><u>Experiences</u></h2>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6 col-lg-4">
-                    <div class="timeline-content text-center mb-80 wow fadeInUp" data-wow-delay="300ms">
+                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="300ms">
                         <div class="period-date-exp">
                             Dec 2022 - Jul 2024
                         </div>
@@ -308,7 +308,7 @@
                 </div>
 
                 <div class="col-md-6 col-lg-4">
-                    <div class="timeline-content text-center mb-80 wow fadeInUp" data-wow-delay="500ms">
+                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="500ms">
                         <div class="period-date-exp">
                             Oct 2021 - Feb 2022
                         </div>
@@ -320,7 +320,7 @@
                 </div>
 
                 <div class="col-md-6 col-lg-4">
-                    <div class="timeline-content text-center mb-80 wow fadeInUp" data-wow-delay="700ms">
+                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="700ms">
                         <div class="period-date-exp">
                             Mar 2021 - Aug 2021
                         </div>
@@ -332,7 +332,7 @@
                 </div>
 
                 <div class="col-md-6 col-lg-4">
-                    <div class="timeline-content text-center mb-80 wow fadeInUp" data-wow-delay="100ms">
+                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="100ms">
                         <div class="period-date-exp">
                             Jan 2019 - Feb 2019
                         </div>
