--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Alime - Photography HTML Template</title>
+    <title>NRFZ | Home</title>
 
     <link rel="icon" href="./img/core-img/favicon.png">
 
@@ -87,26 +87,26 @@
                         <div class="profile-link wow fadeInUp" data-wow-delay="700ms">
                             <a href="https://github.com/nurafianZulkifli" target="_blank" class="media_link"
                                 title="GitHub">
-                                <div class="fa-brands fa-github" style="font-size: 32px"></div>
+                                <div class="fa-brands fa-github" style="font-size: 30px; padding-bottom: 25px;"></div>
                             </a>
                             <a href="https://twitter.com/nrfzlkf_" target="_blank" class="media_link"
                                 title="X (Twitter)">
-                                <div class="fa-brands fa-x-twitter" style="font-size: 32px"></div>
+                                <div class="fa-brands fa-x-twitter" style="font-size: 30px"></div>
                             </a>
                             <a href="https://www.facebook.com/Nrfnzlkf/" target="_blank" class="media_link"
                                 title="Facebook">
-                                <div class="fa-brands fa-facebook" style="font-size: 32px"></div>
+                                <div class="fa-brands fa-facebook" style="font-size: 30px"></div>
                             </a>
                             <a href="https://www.instagram.com/nrfz._/" target="_blank" class="media_link"
                                 title="Instagram">
-                                <div class="fa-brands fa-instagram" style="font-size: 32px"></div>
+                                <div class="fa-brands fa-instagram" style="font-size: 30px"></div>
                             </a>
                             <a href="https://www.linkedin.com/in/nurafian-zulkifli/" target="_blank" class="media_link"
                                 title="LinkedIn">
-                                <div class="fa-brands fa-linkedin" style="font-size: 32px"></div>
+                                <div class="fa-brands fa-linkedin" style="font-size: 30px"></div>
                             </a>
                             <a href="mailto:nurafian.bz33@gmail.com" class="media_link" title="Email Me">
-                                <div class="fa-solid fa-envelope-open" style="font-size: 32px"></div>
+                                <div class="fa-solid fa-envelope-open" style="font-size: 30px"></div>
                             </a>
                         </div>
                     </div>
