--- a/gallery.html
+++ b/gallery.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Alime - Photography HTML Template</title>
+    <title>NRFZ | Works by NRFZ</title>
 
     <link rel="icon" href="./img/core-img/favicon.png">
 
@@ -71,9 +71,6 @@
                                     <li><a href="./blog.html">Blog</a></li>
 
                                 </ul>
-
-                                <!--                                 <div class="search-icon" data-toggle="modal" data-target="#searchModal"><i
-                                        class="ti-search"></i></div> -->
                             </div>
 
                         </div>
@@ -84,7 +81,8 @@
     </header>
 
 
-    <section class="breadcrumb-area bg-img bg-overlay jarallax" style="background-image: url(img/bg-img/38.jpg);">
+    <section class="breadcrumb-area bg-img bg-overlay jarallax"
+        style="background-image: url(img/bg-img/hero-bg-small.png);">
         <div class="container h-100">
             <div class="row h-100 align-items-center">
                 <div class="col-12">
@@ -111,133 +109,100 @@
 
                     <div class="alime-projects-menu wow fadeInUp" data-wow-delay="100ms">
                         <div class="portfolio-menu text-center">
-                            <button class="btn active" data-filter="*">All</button>
-                            <button class="btn" data-filter=".human">Human</button>
-                            <button class="btn" data-filter=".nature">Nature</button>
-                            <button class="btn" data-filter=".country">Country</button>
-                            <button class="btn" data-filter=".video">Video</button>
+                            <button class="btn active" data-filter="*">All Projects</button>
+                            <button class="btn" data-filter=".human">Website Designs</button>
+                            <button class="btn" data-filter=".nature">Concepts & Replications</button>
+                            <button class="btn" data-filter=".country">Infographic Designs</button>
+                            <button class="btn" data-filter=".video">Mockup Designs</button>
+                            <button class="btn" data-filter=".video">Logo Designs</button>
+                            <button class="btn" data-filter=".video">Initiatives & Implementations</button>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="row alime-portfolio">
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature mb-30 wow fadeInUp"
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item human mb-30 wow fadeInUp"
                     data-wow-delay="100ms">
                     <div class="single-portfolio-content">
-                        <img src="img/bg-img/39.jpg" alt>
+                        <img src="https://i.imgur.com/r0gIlFD.png" alt="bp12-nws">
                         <div class="hover-content">
-                            <a href="img/bg-img/39.jpg" class="portfolio-img">+</a>
+                            <h4>New Wayfinding System for BP12 Jelapang</h4>
+                            <a class="info" href="worksbynrfz/bp12.html" class="portfolio-img"><i
+                                    class="fa-solid fa-circle-info"></i></a>
+                            <a href="https://i.imgur.com/r0gIlFD.png" class="portfolio-img"><i
+                                    class="fa-solid fa-magnifying-glass-plus"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item human mb-30 wow fadeInUp"
+                    data-wow-delay="300ms">
+                    <div class="single-portfolio-content">
+                        <img src="https://i.imgur.com/6oNoqnp.png" alt="man-a22-mascot">
+                        <div class="hover-content">
+                            <h4>MAN A22 Lion Mascot Replication</h4>
+                            <a class="info" href="worksbynrfz/man-a22-masc.html" class="portfolio-img"><i
+                                    class="fa-solid fa-circle-info"></i></a>
+                            <a href="https://i.imgur.com/6oNoqnp.png" class="portfolio-img"><i
+                                    class="fa-solid fa-magnifying-glass-plus"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item human mb-30 wow fadeInUp"
+                    data-wow-delay="500ms">
+                    <div class="single-portfolio-content">
+                        <img src="https://i.imgur.com/03mFKk0.png" alt>
+                        <div class="hover-content">
+                            <h4>MyTransport.SG App Redesign</h4>
+                            <a class="info" href="worksbynrfz/myts-app.html" class="portfolio-img"><i
+                                    class="fa-solid fa-circle-info"></i></a>
+                            <a href="https://i.imgur.com/03mFKk0.png" class="portfolio-img"><i
+                                    class="fa-solid fa-magnifying-glass-plus"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature mb-30 wow fadeInUp"
+                    data-wow-delay="700ms">
+                    <div class="single-portfolio-content">
+                        <img src="https://i.imgur.com/FC4fSsG.png" alt>
+                        <div class="hover-content">
+                            <h4>Bus Replications</h4>
+                            <a class="info" href="worksbynrfz/bus-rep.html" class="portfolio-img"><i
+                                    class="fa-solid fa-circle-info"></i></a>
+                            <a href="https://i.imgur.com/FC4fSsG.png" class="portfolio-img"><i
+                                    class="fa-solid fa-magnifying-glass-plus"></i></a>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item video human mb-30 wow fadeInUp"
-                    data-wow-delay="300ms">
-                    <div class="single-portfolio-content">
-                        <img src="img/bg-img/40.jpg" alt>
-                        <div class="hover-content">
-                            <a href="img/bg-img/40.jpg" class="portfolio-img">+</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item country mb-30 wow fadeInUp"
-                    data-wow-delay="500ms">
-                    <div class="single-portfolio-content">
-                        <img src="img/bg-img/41.jpg" alt>
-                        <div class="hover-content">
-                            <a href="img/bg-img/41.jpg" class="portfolio-img">+</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item human mb-30 wow fadeInUp"
-                    data-wow-delay="700ms">
-                    <div class="single-portfolio-content">
-                        <img src="img/bg-img/42.jpg" alt>
-                        <div class="hover-content">
-                            <a href="img/bg-img/42.jpg" class="portfolio-img">+</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature mb-30 wow fadeInUp"
                     data-wow-delay="100ms">
                     <div class="single-portfolio-content">
-                        <img src="img/bg-img/43.jpg" alt>
+                        <img src="https://i.imgur.com/kstN8gT.png" alt>
                         <div class="hover-content">
-                            <a href="img/bg-img/43.jpg" class="portfolio-img">+</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item video country mb-30 wow fadeInUp"
-                    data-wow-delay="300ms">
-                    <div class="single-portfolio-content">
-                        <img src="img/bg-img/44.jpg" alt>
-                        <div class="hover-content">
-                            <a href="img/bg-img/44.jpg" class="portfolio-img">+</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item human mb-30 wow fadeInUp"
-                    data-wow-delay="500ms">
-                    <div class="single-portfolio-content">
-                        <img src="img/bg-img/45.jpg" alt>
-                        <div class="hover-content">
-                            <a href="img/bg-img/45.jpg" class="portfolio-img">+</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature mb-30 wow fadeInUp"
-                    data-wow-delay="700ms">
-                    <div class="single-portfolio-content">
-                        <img src="img/bg-img/46.jpg" alt>
-                        <div class="hover-content">
-                            <a href="img/bg-img/46.jpg" class="portfolio-img">+</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item video country mb-30 wow fadeInUp"
-                    data-wow-delay="100ms">
-                    <div class="single-portfolio-content">
-                        <img src="img/bg-img/47.jpg" alt>
-                        <div class="hover-content">
-                            <a href="img/bg-img/47.jpg" class="portfolio-img">+</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item human mb-30 wow fadeInUp"
-                    data-wow-delay="300ms">
-                    <div class="single-portfolio-content">
-                        <img src="img/bg-img/48.jpg" alt>
-                        <div class="hover-content">
-                            <a href="img/bg-img/48.jpg" class="portfolio-img">+</a>
+                            <h4>How To Use TimeTree Infographic</h4>
+                            <a class="info" href="worksbynrfz/igra3.html" class="portfolio-img"><i
+                                    class="fa-solid fa-circle-info"></i></a>
+                            <a href="https://i.imgur.com/kstN8gT.png" class="portfolio-img"><i
+                                    class="fa-solid fa-magnifying-glass-plus"></i></a>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item country mb-30 wow fadeInUp"
-                    data-wow-delay="500ms">
+                    data-wow-delay="300ms">
                     <div class="single-portfolio-content">
-                        <img src="img/bg-img/49.jpg" alt>
+                        <img src="https://i.imgur.com/snXfU8d.png" alt>
                         <div class="hover-content">
-                            <a href="img/bg-img/49.jpg" class="portfolio-img">+</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item country mb-30 wow fadeInUp"
-                    data-wow-delay="700ms">
-                    <div class="single-portfolio-content">
-                        <img src="img/bg-img/50.jpg" alt>
-                        <div class="hover-content">
-                            <a href="img/bg-img/50.jpg" class="portfolio-img">+</a>
+                            <h4>Train Delays Checker V2</h4>
+                            <a class="info" href="worksbynrfz/delays-checker.html" class="portfolio-img"><i
+                                    class="fa-solid fa-circle-info"></i></a>
+                            <a href="https://i.imgur.com/snXfU8d.png" class="portfolio-img"><i
+                                    class="fa-solid fa-magnifying-glass-plus"></i></a>
                         </div>
                     </div>
                 </div>
@@ -257,22 +222,15 @@
                         <div class="copywrite-text">
                             <p>
                                 Copyright &copy;
-                                <script>document.write(new Date().getFullYear());</script> All rights reserved | This
-                                template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a
-                                    href="https://colorlib.com" target="_blank">Colorlib</a>
+                                <script>document.write(new Date().getFullYear());</script> All rights reserved</a>
                             </p>
                         </div>
 
-                        <div class="footer-logo">
-                            <a href="#"><img src="img/core-img/logo2.png" alt></a>
-                        </div>
-
                         <div class="social-info">
-                            <a href="#"><i class="fa-brands fa-github" aria-hidden="true"></i></a>
-                            <a href="#"><i class="fa-brands fa-x-twitter" aria-hidden="true"></i></a>
-                            <a href="#"><i class="fa-brands fa-facebook" aria-hidden="true"></i></a>
-                            <a href="#"><i class="fa-brands fa-instagram" aria-hidden="true"></i></a>
-                            <a href="#"><i class="fa-brands fa-linkedin" aria-hidden="true"></i></a>
+                            <a href="https://github.com/nurafianZulkifli"><i class="fa-brands fa-github" aria-hidden="true"></i></a>
+                            <a href="https://twitter.com/nrfzlkf_"><i class="fa-brands fa-x-twitter" aria-hidden="true"></i></a>
+                            <a href="https://www.facebook.com/Nrfnzlkf/"><i class="fa-brands fa-facebook" aria-hidden="true"></i></a>
+                            <a href="https://www.instagram.com/nrfz._/"><i class="fa-brands fa-instagram" aria-hidden="true"></i></a>
                         </div>
                     </div>
                 </div>
@@ -280,7 +238,11 @@
         </div>
     </footer>
 
-
+    <script type="text/javascript" id="cookiebanner" src="js/cookies-banner.js" data-position="bottom"
+        data-bg="#f2f3e5" data-fg="#000" data-font-family="Poppins, sans-serif"
+        data-zindex="12345111111"
+        data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
+        </script>
 
     <script src="js/jquery.min.js"></script>
 
@@ -292,19 +254,7 @@
 
     <script src="js/default-assets/active.js"></script>
 
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
 
-        gtag('config', 'UA-23581568-13');
-    </script>
-    <script defer
-        src="https://static.cloudflareinsights.com/beacon.min.js/vcd15cbe7772f49c399c6a5babf22c1241717689176015"
-        integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ=="
-        data-cf-beacon='{"rayId":"8b195e1b0e679d20","serverTiming":{"name":{"cfL4":true}},"version":"2024.7.0","token":"cd0b4b3a733644fc843ef0b185f98241"}'
-        crossorigin="anonymous"></script>
 </body>
 
 </html>
