--- a/gallery.html
+++ b/gallery.html
@@ -81,7 +81,7 @@
     </header>
 
 
-    <section class="breadcrumb-area bg-img bg-overlay jarallax"
+    <section class="breadcrumb-area bg-img bg-overlay"
         style="background-image: url(img/bg-img/hero-bg-small.png);">
         <div class="container h-100">
             <div class="row h-100 align-items-center">
@@ -110,19 +110,33 @@
                     <div class="alime-projects-menu wow fadeInUp" data-wow-delay="100ms">
                         <div class="portfolio-menu text-center">
                             <button class="btn active" data-filter="*">All Projects</button>
-                            <button class="btn" data-filter=".human">Website Designs</button>
-                            <button class="btn" data-filter=".nature">Concepts & Replications</button>
-                            <button class="btn" data-filter=".country">Infographic Designs</button>
-                            <button class="btn" data-filter=".video">Mockup Designs</button>
-                            <button class="btn" data-filter=".video">Logo Designs</button>
-                            <button class="btn" data-filter=".video">Initiatives & Implementations</button>
+                            <button class="btn" data-filter=".wd">Website Designs</button>
+                            <button class="btn" data-filter=".cr">Concepts & Replications</button>
+                            <button class="btn" data-filter=".id">Infographic Designs</button>
+                            <button class="btn" data-filter=".md">Mockup Designs</button>
+                            <button class="btn" data-filter=".ld">Logo Designs</button>
+                            <button class="btn" data-filter=".ii">Initiatives & Implementations</button>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="row alime-portfolio">
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item human mb-30 wow fadeInUp"
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ii mb-30 wow fadeInUp"
+                data-wow-delay="100ms">
+                <div class="single-portfolio-content">
+                    <img src="https://i.imgur.com/YgEWKR0.png" alt="bp12-nws">
+                    <div class="hover-content">
+                        <h4>Store Inventory Tracking</h4>
+                        <a class="info" href="worksbynrfz/sit.html" class="portfolio-img"><i
+                                class="fa-solid fa-circle-info"></i></a>
+                        <a href="https://i.imgur.com/YgEWKR0.png" class="portfolio-img"><i
+                                class="fa-solid fa-magnifying-glass-plus"></i></a>
+                    </div>
+                </div>
+            </div>
+
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp"
                     data-wow-delay="100ms">
                     <div class="single-portfolio-content">
                         <img src="https://i.imgur.com/r0gIlFD.png" alt="bp12-nws">
@@ -136,7 +150,35 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item human mb-30 wow fadeInUp"
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp"
+                data-wow-delay="100ms">
+                <div class="single-portfolio-content">
+                    <img src="https://i.imgur.com/0CvilmH.png" alt="bp12-nws">
+                    <div class="hover-content">
+                        <h4>LTA Bus PIDS Redesign</h4>
+                        <a class="info" href="worksbynrfz/lta-pids.html" class="portfolio-img"><i
+                                class="fa-solid fa-circle-info"></i></a>
+                        <a href="https://i.imgur.com/0CvilmH.png" class="portfolio-img"><i
+                                class="fa-solid fa-magnifying-glass-plus"></i></a>
+                    </div>
+                </div>
+            </div>
+
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp"
+                data-wow-delay="100ms">
+                <div class="single-portfolio-content">
+                    <img src="https://i.imgur.com/fkDgsqc.png" alt="bp12-nws">
+                    <div class="hover-content">
+                        <h4>LTA Bus Stop Pole Design Refresh</h4>
+                        <a class="info" href="worksbynrfz/lta-bp.html" class="portfolio-img"><i
+                                class="fa-solid fa-circle-info"></i></a>
+                        <a href="https://i.imgur.com/fkDgsqc.png" class="portfolio-img"><i
+                                class="fa-solid fa-magnifying-glass-plus"></i></a>
+                    </div>
+                </div>
+            </div>
+
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp"
                     data-wow-delay="300ms">
                     <div class="single-portfolio-content">
                         <img src="https://i.imgur.com/6oNoqnp.png" alt="man-a22-mascot">
@@ -150,7 +192,7 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item human mb-30 wow fadeInUp"
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item md mb-30 wow fadeInUp"
                     data-wow-delay="500ms">
                     <div class="single-portfolio-content">
                         <img src="https://i.imgur.com/03mFKk0.png" alt>
@@ -165,7 +207,7 @@
                 </div>
 
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature mb-30 wow fadeInUp"
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp"
                     data-wow-delay="700ms">
                     <div class="single-portfolio-content">
                         <img src="https://i.imgur.com/FC4fSsG.png" alt>
@@ -179,7 +221,7 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item video human mb-30 wow fadeInUp"
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item video id mb-30 wow fadeInUp"
                     data-wow-delay="100ms">
                     <div class="single-portfolio-content">
                         <img src="https://i.imgur.com/kstN8gT.png" alt>
@@ -193,7 +235,7 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item country mb-30 wow fadeInUp"
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item wd mb-30 wow fadeInUp"
                     data-wow-delay="300ms">
                     <div class="single-portfolio-content">
                         <img src="https://i.imgur.com/snXfU8d.png" alt>
