--- a/gallery.html
+++ b/gallery.html
@@ -22,27 +22,6 @@
         <div class="loader"></div>
     </div>
 
-
-    <div class="top-search-area">
-        <div class="modal fade" id="searchModal" tabindex="-1" role="dialog" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered" role="document">
-                <div class="modal-content">
-                    <div class="modal-body">
-
-                        <button type="button" class="btn close-btn" data-dismiss="modal"><i
-                                class="ti-close"></i></button>
-
-                        <form action="index.html" method="post">
-                            <input type="search" name="top-search-bar" class="form-control"
-                                placeholder="Search and hit enter...">
-                            <button type="submit">Search</button>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
     <header class="header-area">
 
         <div class="main-header-area">
@@ -167,12 +146,12 @@
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp"
                 data-wow-delay="100ms">
                 <div class="single-portfolio-content">
-                    <img src="https://i.imgur.com/fkDgsqc.png" alt="bp12-nws">
+                    <img src="https://i.imgur.com/69edjaV.png" alt="bp12-nws">
                     <div class="hover-content">
                         <h4>LTA Bus Stop Pole Design Refresh</h4>
                         <a class="info" href="worksbynrfz/lta-bp.html" class="portfolio-img"><i
                                 class="fa-solid fa-circle-info"></i></a>
-                        <a href="https://i.imgur.com/fkDgsqc.png" class="portfolio-img"><i
+                        <a href="https://i.imgur.com/69edjaV.png" class="portfolio-img"><i
                                 class="fa-solid fa-magnifying-glass-plus"></i></a>
                     </div>
                 </div>
@@ -248,6 +227,24 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp"
+                data-wow-delay="300ms">
+                <div class="single-portfolio-content">
+                    <img src="https://i.imgur.com/7e69TyC.png" alt>
+                    <div class="hover-content">
+                        <h4>More Replications</h4>
+                        <a class="info" href="worksbynrfz/more-rep.html" class="portfolio-img"><i
+                                class="fa-solid fa-circle-info"></i></a>
+                        <a href="https://i.imgur.com/7e69TyC.png" class="portfolio-img"><i
+                                class="fa-solid fa-magnifying-glass-plus"></i></a>
+                    </div>
+                </div>
+            </div>
+
+
+
+
             </div>
         </div>
     </div>
