--- a/worksbynrfz/sit.html
+++ b/worksbynrfz/sit.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>NRFZ | About</title>
+    <title>Store Inventory Tracking | WBN</title>
 
     <link rel="icon" href="../img/core-img/favicon.png">
 
@@ -50,8 +50,8 @@
                             <div class="classynav">
                                 <ul id="nav">
                                     <li><a href="../index.html">Home</a></li>
-                                    <li class="active"><a href="../about.html">About</a></li>
-                                    <li><a href="../gallery.html">Works by NRFZ</a></li>
+                                    <li><a href="../about.html">About</a></li>
+                                    <li class="active"><a href="../gallery.html">Works by NRFZ</a></li>
                                     <li><a href="../blog.html">Blog</a></li>
 
                                 </ul>
@@ -95,7 +95,8 @@
                             <i class="fa-solid fa-pen-to-square"></i>
                         </div>
                         <h3 style="font-size: 20px; font-weight: bolder;">Project Description</h3>
-                        <h4 style="font-size: 15px; font-weight: normal;">3 out of my many ideas and prototypes on how to enhance
+                        <h4 style="font-size: 15px; font-weight: normal;">3 out of my many ideas and prototypes on how
+                            to enhance
                             store/inventory tracking operations.
                             (Details redacted for privacy)</h4>
                     </div>
@@ -137,36 +138,31 @@
     <section class="about-me-area bg-gray section-padding-screenS clearfix">
         <div class="col-lg-12 screenS wow fadeInUp" data-wow-delay="100ms">
             <div class="portfolio-info">
-              <div class="portfolio-details-slider swiper">
-                <div class="swiper-wrapper align-items-center">
+                <div class="portfolio-details-slider swiper">
+                    <div class="swiper-wrapper align-items-center">
 
-                  <div class="swiper-slide">
-                    <img src="https://i.imgur.com/YgEWKR0.png" alt="">
-                  </div>
+                        <div class="swiper-slide">
+                            <img src="https://i.imgur.com/YgEWKR0.png" alt="compilation-ui">
+                        </div>
 
-                  <div class="swiper-slide">
-                    <img src="https://i.imgur.com/y9XAe9A.png" alt="">
-                  </div>
+                        <div class="swiper-slide">
+                            <img src="https://i.imgur.com/y9XAe9A.png" alt="inventory-status-tracker">
+                        </div>
 
-                  <div class="swiper-slide">
-                    <img src="https://i.imgur.com/gYOpvWO.png" alt="">
-                  </div>
+                        <div class="swiper-slide">
+                            <img src="https://i.imgur.com/gYOpvWO.png" alt="items-tracking">
+                        </div>
 
-                  <div class="swiper-slide">
-                    <img src="https://i.imgur.com/sKUoN2g.png" alt="">
-                  </div>
+                        <div class="swiper-slide">
+                            <img src="https://i.imgur.com/sKUoN2g.png" alt="inventory-tracking">
+                        </div>
 
+                    </div>
+                    <div class="swiper-pagination"></div>
                 </div>
-                <div class="swiper-pagination"></div>
-              </div>
             </div>
-          </div>
+        </div>
     </section>
-
-
-
-
-
 
 
     <footer class="footer-area">
@@ -198,8 +194,8 @@
         </div>
     </footer>
 
-    <script type="text/javascript" id="cookiebanner" src="../js/cookies-banner.js" data-position="bottom" data-bg="#f2f3e5"
-        data-fg="#000" data-font-family="Poppins, sans-serif" data-zindex="12345111111"
+    <script type="text/javascript" id="cookiebanner" src="../js/cookies-banner.js" data-position="bottom"
+        data-bg="#f2f3e5" data-fg="#000" data-font-family="Poppins, sans-serif" data-zindex="12345111111"
         data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
         </script>
 
