Feature Update for Version Next

--- a/gallery.html
+++ b/gallery.html
@@ -60,8 +60,7 @@
     </header>
 
 
-    <section class="breadcrumb-area bg-img bg-overlay"
-        style="background-image: url(img/bg-img/hero-bg-small.png);">
+    <section class="breadcrumb-area bg-img bg-overlay" style="background-image: url(img/bg-img/hero-bg-small.png);">
         <div class="container h-100">
             <div class="row h-100 align-items-center">
                 <div class="col-12">
@@ -101,22 +100,20 @@
             </div>
             <div class="row alime-portfolio">
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ii mb-30 wow fadeInUp"
-                data-wow-delay="100ms">
-                <div class="single-portfolio-content">
-                    <img src="https://i.imgur.com/YgEWKR0.png" alt="bp12-nws">
-                    <div class="hover-content">
-                        <h4>Store Inventory Tracking</h4>
-                        <a class="info" href="worksbynrfz/sit.html" class="portfolio-img"><i
-                                class="fa-solid fa-circle-info"></i></a>
-                        <a href="https://i.imgur.com/YgEWKR0.png" class="portfolio-img"><i
-                                class="fa-solid fa-magnifying-glass-plus"></i></a>
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ii mb-30 wow fadeInUp" data-wow-delay="100ms">
+                    <div class="single-portfolio-content">
+                        <img src="https://i.imgur.com/YgEWKR0.png" alt="store-invent">
+                        <div class="hover-content">
+                            <h4>Store Inventory Tracking</h4>
+                            <a class="info" href="worksbynrfz/sit.html" class="portfolio-img"><i
+                                    class="fa-solid fa-circle-info"></i></a>
+                            <a href="https://i.imgur.com/YgEWKR0.png" class="portfolio-img"><i
+                                    class="fa-solid fa-magnifying-glass-plus"></i></a>
+                        </div>
                     </div>
                 </div>
-            </div>
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp"
-                    data-wow-delay="100ms">
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="100ms">
                     <div class="single-portfolio-content">
                         <img src="https://i.imgur.com/r0gIlFD.png" alt="bp12-nws">
                         <div class="hover-content">
@@ -129,36 +126,33 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp"
-                data-wow-delay="100ms">
-                <div class="single-portfolio-content">
-                    <img src="https://i.imgur.com/0CvilmH.png" alt="bp12-nws">
-                    <div class="hover-content">
-                        <h4>LTA Bus PIDS Redesign</h4>
-                        <a class="info" href="worksbynrfz/lta-pids.html" class="portfolio-img"><i
-                                class="fa-solid fa-circle-info"></i></a>
-                        <a href="https://i.imgur.com/0CvilmH.png" class="portfolio-img"><i
-                                class="fa-solid fa-magnifying-glass-plus"></i></a>
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="100ms">
+                    <div class="single-portfolio-content">
+                        <img src="https://i.imgur.com/0CvilmH.png" alt="bus-pids">
+                        <div class="hover-content">
+                            <h4>LTA Bus PIDS Redesign</h4>
+                            <a class="info" href="worksbynrfz/lta-pids.html" class="portfolio-img"><i
+                                    class="fa-solid fa-circle-info"></i></a>
+                            <a href="https://i.imgur.com/0CvilmH.png" class="portfolio-img"><i
+                                    class="fa-solid fa-magnifying-glass-plus"></i></a>
+                        </div>
                     </div>
                 </div>
-            </div>
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp"
-                data-wow-delay="100ms">
-                <div class="single-portfolio-content">
-                    <img src="https://i.imgur.com/69edjaV.png" alt="bp12-nws">
-                    <div class="hover-content">
-                        <h4>LTA Bus Stop Pole Design Refresh</h4>
-                        <a class="info" href="worksbynrfz/lta-bp.html" class="portfolio-img"><i
-                                class="fa-solid fa-circle-info"></i></a>
-                        <a href="https://i.imgur.com/69edjaV.png" class="portfolio-img"><i
-                                class="fa-solid fa-magnifying-glass-plus"></i></a>
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="100ms">
+                    <div class="single-portfolio-content">
+                        <img src="https://i.imgur.com/69edjaV.png" alt="bus-stop-pole">
+                        <div class="hover-content">
+                            <h4>LTA Bus Stop Pole Design Refresh</h4>
+                            <a class="info" href="worksbynrfz/lta-bp.html" class="portfolio-img"><i
+                                    class="fa-solid fa-circle-info"></i></a>
+                            <a href="https://i.imgur.com/69edjaV.png" class="portfolio-img"><i
+                                    class="fa-solid fa-magnifying-glass-plus"></i></a>
+                        </div>
                     </div>
                 </div>
-            </div>
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp"
-                    data-wow-delay="300ms">
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
                         <img src="https://i.imgur.com/6oNoqnp.png" alt="man-a22-mascot">
                         <div class="hover-content">
@@ -171,10 +165,9 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item md mb-30 wow fadeInUp"
-                    data-wow-delay="500ms">
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item md mb-30 wow fadeInUp" data-wow-delay="500ms">
                     <div class="single-portfolio-content">
-                        <img src="https://i.imgur.com/03mFKk0.png" alt>
+                        <img src="https://i.imgur.com/03mFKk0.png" alt="myts-app">
                         <div class="hover-content">
                             <h4>MyTransport.SG App Redesign</h4>
                             <a class="info" href="worksbynrfz/myts-app.html" class="portfolio-img"><i
@@ -186,10 +179,9 @@
                 </div>
 
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp"
-                    data-wow-delay="700ms">
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="700ms">
                     <div class="single-portfolio-content">
-                        <img src="https://i.imgur.com/FC4fSsG.png" alt>
+                        <img src="https://i.imgur.com/FC4fSsG.png" alt="bus-rep">
                         <div class="hover-content">
                             <h4>Bus Replications</h4>
                             <a class="info" href="worksbynrfz/bus-rep.html" class="portfolio-img"><i
@@ -203,7 +195,7 @@
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item video id mb-30 wow fadeInUp"
                     data-wow-delay="100ms">
                     <div class="single-portfolio-content">
-                        <img src="https://i.imgur.com/kstN8gT.png" alt>
+                        <img src="https://i.imgur.com/kstN8gT.png" alt="time-tree">
                         <div class="hover-content">
                             <h4>How To Use TimeTree Infographic</h4>
                             <a class="info" href="worksbynrfz/igra3.html" class="portfolio-img"><i
@@ -214,10 +206,9 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item wd mb-30 wow fadeInUp"
-                    data-wow-delay="300ms">
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item wd mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
-                        <img src="https://i.imgur.com/snXfU8d.png" alt>
+                        <img src="https://i.imgur.com/snXfU8d.png" alt="tdc-v2">
                         <div class="hover-content">
                             <h4>Train Delays Checker V2</h4>
                             <a class="info" href="worksbynrfz/delays-checker.html" class="portfolio-img"><i
@@ -228,20 +219,58 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp"
-                data-wow-delay="300ms">
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="500ms">
+                    <div class="single-portfolio-content">
+                        <img src="https://i.imgur.com/7e69TyC.png" alt="more-rep">
+                        <div class="hover-content">
+                            <h4>More Replications</h4>
+                            <a class="info" href="worksbynrfz/more-rep.html" class="portfolio-img"><i
+                                    class="fa-solid fa-circle-info"></i></a>
+                            <a href="https://i.imgur.com/7e69TyC.png" class="portfolio-img"><i
+                                    class="fa-solid fa-magnifying-glass-plus"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="700ms">
+                    <div class="single-portfolio-content">
+                        <img src="https://i.imgur.com/9ynFmuE.png" alt="mrt-sign-s1">
+                        <div class="hover-content">
+                            <h4>MRT Signages Concept/Replications S1</h4>
+                            <a class="info" href="worksbynrfz/mrt-signage-rep-s1.html" class="portfolio-img"><i
+                                    class="fa-solid fa-circle-info"></i></a>
+                            <a href="https://i.imgur.com/9ynFmuE.png" class="portfolio-img"><i
+                                    class="fa-solid fa-magnifying-glass-plus"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp" data-wow-delay="700ms">
+                    <div class="single-portfolio-content">
+                        <img src="https://i.imgur.com/FRqxXUy.png" alt="mrt-sign-s2">
+                        <div class="hover-content">
+                            <h4>MRT Signages Concept/Replications S2</h4>
+                            <a class="info" href="worksbynrfz/mrt-signage-rep-s2.html" class="portfolio-img"><i
+                                    class="fa-solid fa-circle-info"></i></a>
+                            <a href="https://i.imgur.com/FRqxXUy.png" class="portfolio-img"><i
+                                    class="fa-solid fa-magnifying-glass-plus"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item id mb-30 wow fadeInUp"
+                data-wow-delay="700ms">
                 <div class="single-portfolio-content">
-                    <img src="https://i.imgur.com/7e69TyC.png" alt>
+                    <img src="https://i.imgur.com/4DBfqCK.png" alt="hydration-reg">
                     <div class="hover-content">
-                        <h4>More Replications</h4>
-                        <a class="info" href="worksbynrfz/more-rep.html" class="portfolio-img"><i
+                        <h4>Hydration Regime Infographic</h4>
+                        <a class="info" href="worksbynrfz/hydrationreg.html" class="portfolio-img"><i
                                 class="fa-solid fa-circle-info"></i></a>
-                        <a href="https://i.imgur.com/7e69TyC.png" class="portfolio-img"><i
+                        <a href="https://i.imgur.com/4DBfqCK.png" class="portfolio-img"><i
                                 class="fa-solid fa-magnifying-glass-plus"></i></a>
                     </div>
                 </div>
             </div>
-
 
 
 
@@ -266,10 +295,14 @@
                         </div>
 
                         <div class="social-info">
-                            <a href="https://github.com/nurafianZulkifli"><i class="fa-brands fa-github" aria-hidden="true"></i></a>
-                            <a href="https://twitter.com/nrfzlkf_"><i class="fa-brands fa-x-twitter" aria-hidden="true"></i></a>
-                            <a href="https://www.facebook.com/Nrfnzlkf/"><i class="fa-brands fa-facebook" aria-hidden="true"></i></a>
-                            <a href="https://www.instagram.com/nrfz._/"><i class="fa-brands fa-instagram" aria-hidden="true"></i></a>
+                            <a href="https://github.com/nurafianZulkifli"><i class="fa-brands fa-github"
+                                    aria-hidden="true"></i></a>
+                            <a href="https://twitter.com/nrfzlkf_"><i class="fa-brands fa-x-twitter"
+                                    aria-hidden="true"></i></a>
+                            <a href="https://www.facebook.com/Nrfnzlkf/"><i class="fa-brands fa-facebook"
+                                    aria-hidden="true"></i></a>
+                            <a href="https://www.instagram.com/nrfz._/"><i class="fa-brands fa-instagram"
+                                    aria-hidden="true"></i></a>
                         </div>
                     </div>
                 </div>
@@ -277,9 +310,8 @@
         </div>
     </footer>
 
-    <script type="text/javascript" id="cookiebanner" src="js/cookies-banner.js" data-position="bottom"
-        data-bg="#f2f3e5" data-fg="#000" data-font-family="Poppins, sans-serif"
-        data-zindex="12345111111"
+    <script type="text/javascript" id="cookiebanner" src="js/cookies-banner.js" data-position="bottom" data-bg="#f2f3e5"
+        data-fg="#000" data-font-family="Poppins, sans-serif" data-zindex="12345111111"
         data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
         </script>
 
