--- a/worksbynrfz/TRANSFER.html
+++ b/worksbynrfz/TRANSFER.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>MyTransport.SG App Redesign | WBN</title>
+  <title>Hydration Regime Infographic | WBN</title>
 
   <link rel="icon" href="../img/core-img/favicon.png">
 
@@ -65,7 +65,7 @@
   </header>
 
 
-  <section class="breadcrumb-area bg-img bg-overlay" style="background-image: url(https://i.imgur.com/0CvilmH.png)">
+  <section class="breadcrumb-area bg-img bg-overlay" style="background-image: url(https://i.imgur.com/4DBfqCK.png)">
     <div class="container h-100">
       <div class="row h-100 align-items-center">
         <div class="col-12">
@@ -78,7 +78,7 @@
                 </li>
               </ol>
             </nav>
-            <h2 class="page-title">MyTransport.SG App Redesign</h2>
+            <h2 class="page-title">Hydration Regime Infographic</h2>
           </div>
         </div>
       </div>
@@ -95,10 +95,7 @@
               <i class="fa-solid fa-pen-to-square"></i>
             </div>
             <h3 style="font-size: 20px; font-weight: bolder;">Project Description</h3>
-            <h4 style="font-size: 15px; font-weight: normal;"> An app concept of the redesigned MyTransport.SG App,
-              updated with the current design language from the
-              <a href="https://www.samuel-lim.com/singapore-mrt-signage-system">new wayfinding system</a>.
-            </h4>
+            <h4 style="font-size: 15px; font-weight: normal;"> A remake of SAF's Hydration Regime Infographic.
           </div>
         </div>
 
@@ -108,7 +105,7 @@
               <i class="fa-solid fa-list"></i>
             </div>
             <h3 style="font-size: 20px; font-weight: bolder;">Category</h3>
-            <h4 style="font-size: 15px; font-weight: normal;">Mockup Designs</h4>
+            <h4 style="font-size: 15px; font-weight: normal;">Infographic Design</h4>
           </div>
         </div>
 
@@ -125,13 +122,13 @@
     </div>
 
     <!-- Button Provision -->
-    <!-- <div class="row">
+    <div class="row">
       <div class="col-12 text-center wow fadeInUp" data-wow-delay="700ms">
-        <a href="https://drive.google.com/file/d/1JAwwdZ1DZtpb1xlRrICBFnGwgZeQSGi3/view?usp=sharing"
-          class="btn alime-btn btn-2 mt-15" target="_blank">
-          <i class="fa-solid fa-file-pdf"></i>&nbsp;View PDF Version</a>
+        <a href="https://nurafianzulkifli.github.io/train-delays-checker-v2/" class="btn alime-btn btn-2 mt-15"
+          target="_blank">
+          <i class="fa-solid fa-arrow-up-right-from-square"></i>&nbsp;Train Delays Checker V2</a>
       </div>
-    </div> -->
+    </div>
     </div>
   </section>
 
@@ -143,22 +140,22 @@
           <div class="swiper-wrapper align-items-center">
 
             <div class="swiper-slide">
-              <img src="https://imgur.com/1lEzi6x.png" alt="ui-home">
+              <img src="https://i.imgur.com/NpCq4Pj.png" alt="ywt-train-sched">
             </div>
 
             <div class="swiper-slide">
-              <img src="https://imgur.com/wrbVSvd.png" alt="ui-services">
+              <img src="https://i.imgur.com/CQby9Uz.png" alt="exit-dir-1">
             </div>
 
             <div class="swiper-slide">
-              <img src="https://imgur.com/LzB1Kva.png" alt="ui-home-dark">
+              <img src="https://i.imgur.com/3M5vRTH.png" alt="ccl-guide">
             </div>
-
-            <div class="swiper-slide">
-              <img src="https://imgur.com/0mq1EqJ.png" alt="ui-services-dark">
-            </div>
-
           </div>
+
+          <div class="swiper-slide">
+            <img src="https://i.imgur.com/29IkkeQ.png" alt="exit-dir-2">
+          </div>
+        </div>
           <div class="swiper-pagination"></div>
         </div>
       </div>
