--- a/worksbynrfz/lta-bp.html
+++ b/worksbynrfz/lta-bp.html
@@ -65,7 +65,7 @@
   </header>
 
 
-  <section class="breadcrumb-area bg-img bg-overlay" style="background-image: url(https://i.imgur.com/zfqBMdn.png)">
+  <section class="breadcrumb-area bg-img bg-overlay" style="background-image: url(https://i.imgur.com/2cNsXHg.png)">
     <div class="container h-100">
       <div class="row h-100 align-items-center">
         <div class="col-12">
