--- a/blog.html
+++ b/blog.html
@@ -72,7 +72,7 @@
                                 <li class="breadcrumb-item active" aria-current="page">Blog</li>
                             </ol>
                         </nav>
-                        <h2 class="page-title">Latest Blog</h2>
+                        <h2 class="page-title">My Blogs</h2>
                     </div>
                 </div>
             </div>
