Feature Update for Version 2409_RC

--- a/gallery.html
+++ b/gallery.html
@@ -28,7 +28,7 @@
             <div class="classy-nav-container breakpoint-off">
                 <div class="container">
 
-                    <nav class="classy-navbar justify-content-between" id="alimeNav">
+                    <nav class="classy-navbar justify-content-between" id="pwNav">
 
                         <a class="nav-brand" href="./index.html"><img src="./img/core-img/logo.png" alt></a>
 
@@ -80,12 +80,12 @@
     </section>
 
 
-    <div class="alime-portfolio-area section-padding-80 clearfix">
+    <div class="pw-portfolio-area section-padding-80 clearfix">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12">
 
-                    <div class="alime-projects-menu wow fadeInUp" data-wow-delay="100ms">
+                    <div class="pw-projects-menu wow fadeInUp" data-wow-delay="100ms">
                         <div class="portfolio-menu text-center">
                             <button class="btn active" data-filter="*">All Projects</button>
                             <button class="btn" data-filter=".wd">Website Designs</button>
@@ -98,7 +98,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row alime-portfolio">
+            <div class="row pw-portfolio">
 
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ii mb-30 wow fadeInUp" data-wow-delay="100ms">
                     <div class="single-portfolio-content">
