--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="classy-nav-container breakpoint-off">
                 <div class="container">
 
-                    <nav class="classy-navbar justify-content-between" id="alimeNav">
+                    <nav class="classy-navbar justify-content-between" id="pwNav">
 
                         <a class="nav-brand" href="./index.html"><img src="./img/core-img/logo.png" alt></a>
 
@@ -115,7 +115,7 @@
     </section><!-- End Hero -->
 
 
-    <div class="alime-portfolio-area section-padding-80 clearfix">
+    <div class="pw-portfolio-area section-padding-80 clearfix">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12">
@@ -124,7 +124,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row alime-portfolio">
+            <div class="row pw-portfolio">
 
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item human mb-30 wow fadeInUp"
                     data-wow-delay="100ms">
@@ -213,7 +213,7 @@
             </div>
             <div class="row">
                 <div class="col-12 text-center wow fadeInUp" data-wow-delay="700ms">
-                    <a href="./gallery.html" class="btn alime-btn btn-2 mt-15">View All &nbsp;<i
+                    <a href="./gallery.html" class="btn pw-btn btn-2 mt-15">View All &nbsp;<i
                             class="fa-solid fa-arrow-right"></i></a>
                 </div>
             </div>
@@ -351,7 +351,7 @@
 
         <div class="row">
             <div class="col-12 text-center wow fadeInUp" data-wow-delay="700ms">
-                <a href="./about.html" class="btn alime-btn btn-2 mt-15">About Me &nbsp;<i
+                <a href="./about.html" class="btn pw-btn btn-2 mt-15">About Me &nbsp;<i
                         class="fa-solid fa-arrow-right"></i></a>
             </div>
         </div>
