--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
             <div class="classy-nav-container breakpoint-off">
                 <div class="container">
 
-                    <nav class="classy-navbar justify-content-between" id="alimeNav">
+                    <nav class="classy-navbar justify-content-between" id="pwNav">
 
                         <a class="nav-brand" href="./index.html"><img src="./img/core-img/logo.png" alt></a>
 
