--- a/blog.html
+++ b/blog.html
@@ -28,7 +28,7 @@
             <div class="classy-nav-container breakpoint-off">
                 <div class="container">
 
-                    <nav class="classy-navbar justify-content-between" id="alimeNav">
+                    <nav class="classy-navbar justify-content-between" id="pwNav">
 
                         <a class="nav-brand" href="./index.html"><img src="./img/core-img/logo.png" alt></a>
 
@@ -80,7 +80,7 @@
     </section>
 
 
-    <div class="alime-blog-area section-padding-80-0 mb-70">
+    <div class="pw-blog-area section-padding-80-0 mb-70">
         <div class="container">
             <div class="row">
 
