--- a/worksbynrfz/TRANSFER.html
+++ b/worksbynrfz/TRANSFER.html
@@ -33,7 +33,7 @@
       <div class="classy-nav-container breakpoint-off">
         <div class="container">
 
-          <nav class="classy-navbar justify-content-between" id="alimeNav">
+          <nav class="classy-navbar justify-content-between" id="pwNav">
 
             <a class="nav-brand" href="../index.html"><img src="../img/core-img/logo.png" alt></a>
 
@@ -124,7 +124,7 @@
     <!-- Button Provision -->
     <div class="row">
       <div class="col-12 text-center wow fadeInUp" data-wow-delay="700ms">
-        <a href="https://nurafianzulkifli.github.io/train-delays-checker-v2/" class="btn alime-btn btn-2 mt-15"
+        <a href="https://nurafianzulkifli.github.io/train-delays-checker-v2/" class="btn pw-btn btn-2 mt-15"
           target="_blank">
           <i class="fa-solid fa-arrow-up-right-from-square"></i>&nbsp;Train Delays Checker V2</a>
       </div>
