--- a/worksbynrfz/bus-rep.html
+++ b/worksbynrfz/bus-rep.html
@@ -33,7 +33,7 @@
       <div class="classy-nav-container breakpoint-off">
         <div class="container">
 
-          <nav class="classy-navbar justify-content-between" id="alimeNav">
+          <nav class="classy-navbar justify-content-between" id="pwNav">
 
             <a class="nav-brand" href="../index.html"><img src="../img/core-img/logo.png" alt></a>
 
@@ -129,7 +129,7 @@
     <!-- <div class="row">
       <div class="col-12 text-center wow fadeInUp" data-wow-delay="700ms">
         <a href="https://drive.google.com/file/d/1JAwwdZ1DZtpb1xlRrICBFnGwgZeQSGi3/view?usp=sharing"
-          class="btn alime-btn btn-2 mt-15" target="_blank">
+          class="btn pw-btn btn-2 mt-15" target="_blank">
           <i class="fa-solid fa-file-pdf"></i>&nbsp;View PDF Version</a>
       </div>
     </div> -->
