--- a/worksbynrfz/lta-bp.html
+++ b/worksbynrfz/lta-bp.html
@@ -33,7 +33,7 @@
       <div class="classy-nav-container breakpoint-off">
         <div class="container">
 
-          <nav class="classy-navbar justify-content-between" id="alimeNav">
+          <nav class="classy-navbar justify-content-between" id="pwNav">
 
             <a class="nav-brand" href="../index.html"><img src="../img/core-img/logo.png" alt></a>
 
@@ -126,7 +126,7 @@
     <!-- Button Provision -->
     <!-- <div class="row">
             <div class="col-12 text-center wow fadeInUp" data-wow-delay="700ms">
-                <a href="#" class="btn alime-btn btn-2 mt-15" target="_blank">
+                <a href="#" class="btn pw-btn btn-2 mt-15" target="_blank">
                     <i class="fa-solid fa-file-pdf"></i>&nbsp;View PDF Version</a>
             </div>
         </div> -->
