--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 
                 <div class="col-12">
                     <div class="section-heading text-center wow fadeInUp" data-wow-delay="100ms">
-                        <h1><a href="https://en.wikipedia.org/wiki/Jack_of_all_trades">"Jack of all trades, master of
+                        <h1><a href="https://en.wikipedia.org/wiki/Jack_of_all_trades" style="font-size: 20px; color: #5f6051;">"Jack of all trades, master of
                                 none"</a></h2>
                     </div>
                 </div>
