--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                                 <ul id="nav">
                                     <li class="active"><a href="./index.html">Home</a></li>
                                     <li><a href="./about.html">About</a></li>
-                                    <li><a href="./gallery.html">Works by NRFZ</a></li>
+                                    <li><a href="./gallery.html">Works By NRFZ</a></li>
                                     <li><a href="./blog.html">Blog</a></li>
 
                                 </ul>
