--- a/worksbynrfz/sit.html
+++ b/worksbynrfz/sit.html
@@ -35,7 +35,7 @@
 
                     <nav class="classy-navbar justify-content-between" id="pwNav">
 
-                        <a class="nav-brand" href="../index.html"><img src="../img/core-img/logo.png" alt></a>
+                        <a class="nav-brand" href="../index.html"><img src="../img/core-img/logo.png" alt="logo"></a>
 
                         <div class="classy-navbar-toggler">
                             <span class="navbarToggler"><span></span><span></span><span></span></span>
